<resources>
    <string name="app_name">TravelExperts</string>
    <!--Log In -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_edit">View/Edit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logo">Travel Experts</string>
    <string name="title_activity_data_view">DataView</string>
    <!-- Main -->
    <string name="card1">Packages</string>
    <string name="card2">Flights</string>
    <string name="card3">Customers</string>
    <string name="card4">Bookings</string>
    <string name="card5">Products</string>
    <string name="card6">Suppliers</string>
    <string name="card1img">Packages</string>
    <string name="card2img">Flights</string>
    <string name="card3img">Customers</string>
    <string name="card4img">Bookings</string>
    <string name="card5img">Products</string>
    <string name="card6img">Suppliers</string>

    <!-- Data -->
    <string name="dataview">Data View</string>
    <!--Menu -->
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>

    <!-- Profile  -->
    <string name="change_password">Change Password</string>
    <string name="change_contact_details">Change Contact Details</string>
    <string name="settings">Settings</string>
    <string name="agent_name">Agent Name</string>
    <string name="change_image">Change Image</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>

    <!-- ETC -->
    <string name="construction">UNDER CONSTRUCTION</string>
    <string name="package_id">Package Id</string>
    <string name="base_price">Base Price</string>
    <string name="agency_commission">Agency Commission</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="package_name">Package Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="customer_id">Customer ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="home_phone">Home Phone</string>
    <string name="business_phone">Business Phone</string>
    <string name="last_name">Last Name</string>
    <string name="agent_id">Agent ID</string>
    <string name="first_name">First Name</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_no">Booking No</string>
    <string name="trip_type_id">Trip Type Id</string>
    <string name="add">Add</string>
    <string name="travelercount">Traveler Count</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="refresh">Refresh</string>
    <string name="write_a_message">Write a message</string>
    <string name="send">Send</string>


    <string-array name="trip_types">
        <item>B</item>
        <item>G</item>
        <item>L</item>
    </string-array>
</resources>